<resources>
    <string name="app_name">TeacherJournal</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liststud_item">Список студентов</string>
    <string name="perform_item">Предметы</string>
    <string name="attend_item">Посещаемость</string>
    <string name="note_item">Заметки</string>
    <string name="settingprofile_item">Настройки провиля</string>
    <string name="settings">Настройки</string>
    <string name="text_student">Список студентов</string>
    <string name="hint_name">ФИО</string>
    <string name="hint_email">Пол</string>
    <string name="hint_password">Password</string>
    <string name="main_profile">Параметры</string>
    <string name="list_subject">Список предметов</string>

    <string-array name="gander">
        <item>МУЖ</item>
        <item>ЖЕН</item>
    </string-array>

</resources>
