<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/list_stud"
            android:icon="@drawable/ic_group_black_24dp_formenu"
            android:title="@string/liststud_item" />
        <item
            android:id="@+id/perform"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/perform_item" />
        <item
            android:id="@+id/attend"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/attend_item" />
        <item
            android:id="@+id/note"
            android:icon="@drawable/ic_speaker_notes_black_24dp"
            android:title="@string/note_item" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/main_profile" />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        </menu>
    </item>

</menu>
